# visual-servoing

./: INSTALL.md  README.md
assignment/: MűSzaki.pptx  README.md  UjjNorbert_NLUG4F - Copy.docx  UjjNorbert_NLUG4F.docx  claude  projekt_osszefoglalo.md  rendszerterv.md  rendszerterv.txt  vazlat.md
assignment/memory/: MEMORY.md  project_thesis_context.md
learning/: 00_telepites.md  01_ros2_alapok.md  02_gazebo_elso_lepesek.md  03_robot_hello_world.md  README.md  telepites.sh
ros2/src/install/: local_setup.sh  setup.sh
ros2/src/install/learning1/lib/learning1/: publisher_node  subscriber_node
ros2/src/install/learning1/share/learning1/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/src/learning1/: package.xml  setup.cfg  setup.py
ros2/src/learning1/learning1/: publisher_node.py
ros2/src/log/: latest_build
src/visual_servoing/: package.xml  setup.cfg  setup.py
src/visual_servoing/config/: camera_calibration.yaml  params.yaml  visual_servoing.rviz
src/visual_servoing/launch/: simulation.launch.py
src/visual_servoing/models/connector_socket/: model.config  model.sdf
src/visual_servoing/models/wall/: model.config  model.sdf
src/visual_servoing/test/: test_ibvs.py
src/visual_servoing/visual_servoing/: __init__.py  adrc_controller.py  camera_node.py  controller_node.py  feature_detector.py  ibvs_controller.py  vision_node.py
src/visual_servoing/worlds/: assembly_world.world
